--- a/final_pjt_front/public/index.html
+++ b/final_pjt_front/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <!-- 슬라이드 -->
+    <!-- 슬라이드, 푸린이 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Montserrat:400,700&amp;display=swap'>
     <link rel='stylesheet' href='https://unpkg.com/swiper@5.2.0/css/swiper.min.css'><link rel="stylesheet" href="./style.css">
@@ -19,6 +19,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@500&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <noscript>
